--- a/static/styles.css
+++ b/static/styles.css
@@ -7,8 +7,13 @@ body {
     padding: 0;
 }
 
-h1 {
-    color: #333;
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px;
 }
 
 form {
@@ -16,14 +21,23 @@ form {
     text-align: center;
 }
 
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
 label {
     font-size: 18px;
     color: #333;
 }
 
-input {
+.responsive-input {
+    width: 40%;
     padding: 10px;
     font-size: 16px;
+    flex: flex;
+    justify-self: center;
+    align-self: center;
 }
 
 button {
@@ -33,28 +47,17 @@ button {
     color: #fff;
     border: none;
     cursor: pointer;
-}
-
-#recommendations {
     margin-top: 20px;
-    text-align: center;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: #333;
 }
 
 .recommendations-parent {
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.recommendations-container {
+    display: none;
 }
 
 .recommendations-table {
@@ -74,4 +77,14 @@ li {
     background-color: #4CAF50;
     color: black;
     width: 100%;
+}
+
+/* Media Query for mobile devices */
+@media only screen and (max-width: 600px) {
+    .responsive-input {
+        width: 90%;
+        flex: flex;
+        justify-self: center;
+        align-self: center;
+    }
 }
