--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,20 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <div style="display: flex; flex-direction: row; justify-content: center; align-self: center;">
+    <div class="header">
         <h1>Movie Recommender</h1>
     </div>
     <form id="recommendForm">
-        <div style="display: flex; flex-direction: column;">
+        <div class="form-group">
             <label for="movie_name">Enter movie name:</label>
-            <input type="text" id="movie_name" name="movie_name" style="width: 400px; margin: auto;" required>
+            <input type="text" id="movie_name" name="movie_name" class="responsive-input" required>
         </div>
-        <div style="margin-top: 20px;">
+        <div class="button-group">
             <button type="button" onclick="getRecommendations()">Get Recommendations</button>
         </div>
     </form>
     <div class="recommendations-parent">
-        <div id="recommendationsContainer" style="display: none;">
+        <div id="recommendationsContainer" class="recommendations-container">
             <div id="recommendations">
                 <!-- Recommendations will be dynamically updated here -->
                 <h2 id="recommendationsHeading">Recommended Movies:</h2>
