--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,12 @@
 /* styles.css */
-
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .header {
@@ -52,8 +54,11 @@ button {
 
 .recommendations-parent {
     width: 100%;
-    display: flex;
+    display: grid;
     justify-content: center;
+    overflow-y: auto;
+    flex-grow: 1;
+    padding-bottom: 60px;
 }
 
 .recommendations-container {
@@ -87,4 +92,28 @@ button {
         justify-self: center;
         align-self: center;
     }
+}
+
+
+.fixed-footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    bottom: 0;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.social-links {
+    margin-top: 10px;
+}
+
+.social-links a {
+    color: #fff;
+    margin-right: 10px;
+    text-decoration: none;
 }
