--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f2f2f2;
@@ -116,4 +115,9 @@ button {
     color: #fff;
     margin-right: 10px;
     text-decoration: none;
+}
+
+.dim-button {
+    background-color: #b0b0b0;
+    color: #fff;
 }
