--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,3 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,32 +12,39 @@
     </div>
     <form id="recommendForm">
         <div class="form-group">
-            <label for="movie_name">Enter movie name:</label>
+            <label for="movie_name">Enter movie name</label>
             <input type="text" id="movie_name" name="movie_name" class="responsive-input" required>
         </div>
+        <div class="form-group" style="margin-top: 10px">
+            <label for="num_recommendations">Number of Recommendations</label>
+            <select id="num_recommendations" name="num_recommendations" style="width: 5%; display: flex; align-self: center;">
+                <option value="5" selected>5</option>
+                <option value="10">10</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+            </select>
+        </div>
         <div class="button-group">
-            <button type="button" onclick="getRecommendations()">Get Recommendations</button>
+            <button type="button" onclick="getRecommendations()" style="border-radius: 20px;" id="recommendButton" class="dim-button" disabled>Get Recommendations</button>
         </div>
     </form>
     <div class="recommendations-parent">
         <div id="recommendationsContainer" class="recommendations-container">
             <div id="recommendations">
-                <!-- Recommendations will be dynamically updated here -->
-                <h2 id="recommendationsHeading">Recommended Movies:</h2>
+                <h2 id="recommendationsHeading" style="text-align: center;">Recommended Movies</h2>
                 <table class="recommendations-table">
                     <thead>
                         <tr>
                             <th>Movie</th>
-                            <th>Similarity Score</th>
+                            <th>Similarity</th>
                         </tr>
                     </thead>
                     <tbody id="recommendationsTableBody">
-                        <!-- Recommendations will be dynamically added here -->
                     </tbody>
                 </table>
             </div>
         </div>
-    </div>  
+    </div>
 
     <footer class="fixed-footer">
         <div class="footer-content">
@@ -55,43 +60,51 @@
     <script>
         function getRecommendations() {
             var movieName = document.getElementById('movie_name').value;
+            var numRecommendations = document.getElementById('num_recommendations').value;
 
+            if (!movieName.trim()) {
+                alert("Please enter a movie name.");
+                return;
+            }
+    
             var xhr = new XMLHttpRequest();
             xhr.open('POST', '/recommend', true);
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.onreadystatechange = function () {
                 if (xhr.readyState == 4) {
-                    // Clear previous recommendations
                     document.getElementById('recommendationsTableBody').innerHTML = "";
-
-                    // Check if recommendations are available
+    
                     var recommendationsContainer = document.getElementById('recommendationsContainer');
                     var recommendationsHeading = document.getElementById('recommendationsHeading');
-
+    
                     if (xhr.status == 200) {
-                        // Append new recommendations
                         var recommendationsTableBody = document.getElementById('recommendationsTableBody');
                         recommendationsTableBody.innerHTML = xhr.responseText;
-
-                        // Show recommendations container and heading
+    
                         recommendationsContainer.style.display = 'block';
                         recommendationsHeading.style.display = 'block';
                     } else {
-                        // Show message when no recommendations
                         recommendationsContainer.style.display = 'none';
                         recommendationsHeading.style.display = 'none';
                         alert("No similar movies in the database.");
                     }
                 }
             };
-            xhr.send('movie_name=' + encodeURIComponent(movieName));
+            xhr.send('movie_name=' + encodeURIComponent(movieName) + '&num_recommendations=' + encodeURIComponent(numRecommendations));
         }
-
+    
         document.getElementById('recommendForm').addEventListener('submit', function (event) {
-            // Prevent default form submission behavior
             event.preventDefault();
             getRecommendations();
         });
+
+        // Enable/disable the button based on user input
+        document.getElementById('movie_name').addEventListener('input', function () {
+            var recommendButton = document.getElementById('recommendButton');
+            recommendButton.disabled = !this.value.trim();
+            recommendButton.classList.toggle('dim-button', !this.value.trim());
+        });
     </script>
+    
 </body>
 </html>
